--- a/org.ekstep.collectioneditor-1.0/editor/header.css
+++ b/org.ekstep.collectioneditor-1.0/editor/header.css
@@ -72,10 +72,6 @@ body {
     padding-right: 0.3rem;
 }
 
-.ui.grid.custom-container > .column:not(.row) {
-    padding-top: 0.3rem;
-}
-
 .content-masterhead {
     padding: 0 !important;
 }
